--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: Work Remotely In Taiwan (遠距工作者在台灣)
+title: 遠距工作者在台灣
 theme: jekyll-theme-architect
 google_analytics: G-0C793FR0QB
+timezone: Asia/Taipei
